@@ -1,5 +1,10 @@
 2009-04-30  Tobias C. Rittweiler  <tcr@freebits.de>
 
+	* swank-abcl.lisp: Really commit Vodonosov's patch from
+	2009-03-09.
+
+2009-04-30  Tobias C. Rittweiler  <tcr@freebits.de>
+
 	* swank-backend.lisp ([default] declaration-arglist): Add
 	arglist of DECLARATION declaration.
 
